fixed Problem with song list (on mobile) when collapsing header

--- a/src/assets/style/_layout.scss
+++ b/src/assets/style/_layout.scss
@@ -103,7 +103,7 @@
 
     @media (max-width:778px) {
         position: absolute;
-        top: 23vh;
+        top: 19vh;
     }
 
     .songItem {
